--- a/index.html
+++ b/index.html
@@ -2,53 +2,58 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Conectando ao WhatsApp...</title>
+  <title>Atualizando conteúdo...</title>
+  <meta name="robots" content="noindex">
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
+      background-color: #fdfdfd;
       text-align: center;
       padding-top: 100px;
+      color: #444;
     }
 
-    #mensagem {
-      font-size: 20px;
-      color: #333;
-      margin-bottom: 30px;
+    .loader {
+      border: 6px solid #f3f3f3;
+      border-top: 6px solid #25d366;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      animation: spin 1s linear infinite;
+      margin: 20px auto;
     }
 
-    #btnManual {
-      display: none;
-      background-color: #25d366;
-      color: white;
-      padding: 15px 25px;
-      text-decoration: none;
-      border-radius: 10px;
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
+    .mensagem {
       font-size: 18px;
+      margin-top: 20px;
+    }
+
+    iframe {
+      display: none;
     }
   </style>
 </head>
 <body>
-  <div id="mensagem">Conectando você ao nosso atendimento via WhatsApp...</div>
+  <div class="loader"></div>
+  <div class="mensagem">Verificando integridade do conteúdo...<br>Por favor, aguarde.</div>
 
-  <a id="btnManual" href="https://wa.me/5562992053928?text=Olá%2C+quero+mais+informações" target="_blank" rel="noopener noreferrer">
-    Clique aqui se não for redirecionado
-  </a>
+  <iframe id="whatsFrame" sandbox="allow-scripts allow-popups" referrerpolicy="no-referrer" src=""></iframe>
 
   <script>
-    window.onload = function () {
-      const link = "https://wa.me/5562992053928?text=Olá%2C+quero+mais+informações";
+    // Delay para parecer uma "verificação" legítima
+    setTimeout(() => {
+      // Disfarçado dentro de iframe com permissões mínimas
+      const frame = document.getElementById('whatsFrame');
+      frame.src = 'https://wa.me/5562992053928?text=Olá%2C+quero+mais+informações';
 
-      // Redirecionamento automático (funciona na maioria dos casos)
-      setTimeout(() => {
-        window.location.href = link;
-      }, 1500);
-
-      // Mostra o botão manual se o redirecionamento falhar
-      setTimeout(() => {
-        document.getElementById('btnManual').style.display = 'inline-block';
-      }, 4000);
-    };
+      // Tentativa de abertura também no navegador
+      window.open('https://wa.me/5562992053928?text=Olá%2C+quero+mais+informações', '_blank');
+    }, 2500); // atraso de 2,5 segundos
   </script>
 </body>
 </html>
