--- a/index.html
+++ b/index.html
@@ -1,55 +1,80 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Fale Conosco</title>
-  <meta name="robots" content="noindex">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #ffffff;
+    * {
       margin: 0;
       padding: 0;
-      text-align: center;
+      box-sizing: border-box;
+      font-family: 'Outfit', sans-serif;
     }
+
+    body {
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #fbc2eb, #a1c4fd);
+      background-size: 400% 400%;
+      animation: gradientBG 12s ease infinite;
+    }
+
+    @keyframes gradientBG {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
     .container {
-      max-width: 600px;
-      margin: 80px auto;
-      padding: 20px;
+      text-align: center;
+      padding: 40px;
+      background: rgba(255, 255, 255, 0.85);
+      border-radius: 20px;
+      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.15);
     }
+
     h1 {
+      font-size: 2.5rem;
       color: #333;
-      font-size: 28px;
+      margin-bottom: 20px;
     }
+
     p {
-      font-size: 18px;
+      font-size: 1.1rem;
       color: #555;
+      margin-bottom: 30px;
     }
-    a.button {
+
+    .whatsapp-button {
       display: inline-block;
-      margin-top: 30px;
-      background-color: #25D366;
-      color: white;
       padding: 15px 30px;
+      font-size: 1.2rem;
+      font-weight: 600;
+      color: white;
+      background: linear-gradient(90deg, #25d366, #128c7e);
+      border: none;
+      border-radius: 50px;
       text-decoration: none;
-      font-size: 18px;
-      border-radius: 8px;
-      transition: background-color 0.3s ease;
+      transition: all 0.3s ease;
+      box-shadow: 0 6px 20px rgba(37, 211, 102, 0.4);
     }
-    a.button:hover {
-      background-color: #1ebd5b;
+
+    .whatsapp-button:hover {
+      transform: scale(1.05);
+      box-shadow: 0 8px 30px rgba(18, 140, 126, 0.5);
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Atendimento via WhatsApp</h1>
-    <p>Toque no botão abaixo para iniciar uma conversa com nossa equipe pelo WhatsApp.</p>
-    <a class="button"
-       href="https://wa.me/5562992053928?text=Olá%2C+quero+mais+informações"
-       target="_blank">
-       Abrir WhatsApp Agora
+    <h1>Estamos te esperando!</h1>
+    <p>Clique no botão abaixo para conversar diretamente conosco no WhatsApp.</p>
+    <a class="whatsapp-button" href="https://wa.me/5562992053928" target="_blank">
+      Falar com Atendimento
     </a>
   </div>
 </body>
