--- a/index.html
+++ b/index.html
@@ -71,10 +71,9 @@
 </head>
 <body>
   <div class="container">
-    <h1>Estamos te esperando!</h1>
-    <p>Clique no botão abaixo para conversar diretamente conosco no WhatsApp.</p>
+    <h1>Fale agora com o nosso suporte!</h1>
     <a class="whatsapp-button" href="https://wa.me/5562992053928" target="_blank">
-      Falar com Atendimento
+      WhatsApp
     </a>
   </div>
 </body>
