--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #fbc2eb, #a1c4fd);
+      background: linear-gradient(-45deg, #0f9d58, #1de9b6, #00bcd4, #1976d2);
       background-size: 400% 400%;
       animation: gradientBG 12s ease infinite;
     }
@@ -32,20 +32,21 @@
     .container {
       text-align: center;
       padding: 40px;
-      background: rgba(255, 255, 255, 0.85);
+      background: rgba(255, 255, 255, 0.9);
       border-radius: 20px;
       box-shadow: 0 10px 40px rgba(0, 0, 0, 0.15);
+      max-width: 90%;
     }
 
     h1 {
       font-size: 2.5rem;
-      color: #333;
+      color: #0a3d62;
       margin-bottom: 20px;
     }
 
     p {
       font-size: 1.1rem;
-      color: #555;
+      color: #444;
       margin-bottom: 30px;
     }
 
@@ -60,12 +61,12 @@
       border-radius: 50px;
       text-decoration: none;
       transition: all 0.3s ease;
-      box-shadow: 0 6px 20px rgba(37, 211, 102, 0.4);
+      box-shadow: 0 6px 20px rgba(18, 140, 126, 0.4);
     }
 
     .whatsapp-button:hover {
       transform: scale(1.05);
-      box-shadow: 0 8px 30px rgba(18, 140, 126, 0.5);
+      box-shadow: 0 8px 30px rgba(18, 140, 126, 0.6);
     }
   </style>
 </head>
